[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelens"
version = "0.1.0"
description = "TraceLens - Framework Agnostic AI Agent Tracing & Visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TraceLens"}
]
keywords = ["ai", "debugger", "llm", "langchain", "agent", "monitoring", "observability", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://www.tracelensapp.com"
Documentation = "https://www.tracelensapp.com/docs"
Repository = "https://github.com/your-username/tracelens-python-sdk"
Issues = "https://github.com/your-username/tracelens-python-sdk/issues"

[tool.setuptools]
packages = ["universal_debugger"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

